--- a/ExcelPatentDate/packages.config
+++ b/ExcelPatentDate/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EPPlus" version="4.5.3.3" targetFramework="net461" />
+  <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net461" />
+  <package id="HtmlAgilityPack.CssSelectors" version="1.0.2" targetFramework="net461" />
 </packages>
